Added CSS for add icon

--- a/src/components/Stocktable/Stocktable.css
+++ b/src/components/Stocktable/Stocktable.css
@@ -25,11 +25,14 @@
 .stocks-table .add-icon {
   margin-top: 0.5rem;
 }
+.icon{
+    margin-top: 0.5rem;
+}
 .icon:hover,
 .icon:active {
   fill: blue;
   height: 20px;
-  margin-top: 0.5rem;
+  
 }
 
 
