--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,3 @@
-
 .stocklist__navbar {
   display: flex;
   justify-content: space-between;
@@ -31,10 +30,9 @@
         border-bottom: 1px solid #fff;
         letter-spacing: 1px;
       }
-      .active{
-        border-bottom: 1px solid #FFF;
+      .active {
+        border-bottom: 1px solid #fff;
       }
-      
     }
   }
   .stocklist__navbar-buttons {
@@ -69,15 +67,13 @@
 @media screen and (max-width: 720px) {
   .stocklist__navbar {
     padding: 1rem 3rem;
-    
+
     .stocklist-menu {
       display: block;
     }
 
     .stocklist__navbar-buttons-signup button {
-     display: none;
+      display: none;
     }
-
-   
   }
 }
